--- a/client/src/app/style/common.scss
+++ b/client/src/app/style/common.scss
@@ -13,3 +13,26 @@
   @include fade-in(0s, 0.7s, ease-in);
   z-index: 9999;
 }
+
+// texts
+:global .white-text {
+  color: #FFFFFF;
+}
+// margins
+:global .m-0 {
+  margin: 0px !important;
+}
+:global .m-t-4 {
+  margin-top: 4px;
+}
+:global .m-t-10 {
+  margin-top: 10px;
+}
+
+:global .p-0 {
+  padding: 0px !important;
+}
+
+:global .m-t-10-percent {
+  margin-top: 10%;
+}
