--- a/client/src/app/views/home/home.scss
+++ b/client/src/app/views/home/home.scss
@@ -1,3 +1,8 @@
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
 body {
   background: url('../../../../public/assets/images/skybg-min.jpg') no-repeat top center;
   background-size: 100%;
@@ -6,6 +11,14 @@ body {
 :global .row {
   padding: 0;
   margin: 0;
+}
+
+:global .container-fluid {
+  padding: 0px !important;
+}
+
+#global .licode_subbar {
+  display: none !important;
 }
 
 .ch {
