--- a/client/src/app/components/conference/main_screen.scss
+++ b/client/src/app/components/conference/main_screen.scss
@@ -1,19 +1,21 @@
 .mainScreen {
-  height: 100vh;
-  position: relative;
+  width: 320px;
+  height: 220px;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 1030;
 }
 
 .participantsPanel {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+}
+
+.participants {
   width: 320px;
   height: 220px;
-  padding: 20px 0px;
-  position: fixed;
-  top: 0;
-  right: 20px;
-  z-index: 1030;
-
-  .participants {
-    width: 320px;
-    height: 240px;
-  }
+  margin: 10px;
+  border: 1px dotted #ddd;
 }
