--- a/client/src/app/views/home/home.scss
+++ b/client/src/app/views/home/home.scss
@@ -3,11 +3,6 @@ html, body {
   margin: 0;
 }
 
-body {
-  background: url('../../../../public/assets/images/skybg-min.jpg') no-repeat top center;
-  background-size: cover;
-}
-
 :global .row {
   padding: 0;
   margin: 0;
@@ -124,4 +119,11 @@ body {
       color: #333;
     }
   }
+}
+
+
+.channelPage {
+  width: 100%;
+  height: 100vh;
+  padding-top: 10%;
 }
