--- a/client/src/app/views/login/login.scss
+++ b/client/src/app/views/login/login.scss
@@ -1,1 +1,7 @@
-/* nothing */
+.login {
+  background: url('../../../../public/assets/images/skybg-min.jpg') no-repeat top center;
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
+  padding-top: 10%;
+}
