added labels to each stream

--- a/client/src/app/components/conference/streamDisplay.scss
+++ b/client/src/app/components/conference/streamDisplay.scss
@@ -4,7 +4,11 @@
 }
 
 .header {
-  top: 5%;
-  right: 5%;
+  top: 3%;
+  right: 3%;
   z-index: 1030;
+}
+
+.labels {
+  padding: 10px 30px 10px 100px;
 }
