--- a/client/src/app/views/home/home.scss
+++ b/client/src/app/views/home/home.scss
@@ -27,14 +27,20 @@ html, body {
 :global .white-text {
   color: #FFFFFF;
 }
-:global .font1vw {
-  font-size: 1vw;
+:global .font-6vh {
+  font-size: 6vh;
 }
-:global .font-point8vw {
-  font-size: .8vw;
+:global .font-5vh {
+  font-size: 5vh;
 }
-:global .font-point6vw {
-  font-size: .6vw;
+:global .font-4vh {
+  font-size: 4vh;
+}
+:global .font-3vh {
+  font-size: 3vh;
+}
+:global .font-2vh {
+  font-size: 2vh;
 }
 
 :global .relative {
@@ -163,4 +169,12 @@ html, body {
   width: 100%;
   height: 100vh;
   padding-top: 10%;
+}
+
+
+:global .blackToTransparent {
+  background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 49%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 49%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 49%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=1 ); /* IE6-9 */
 }
