--- a/client/src/app/components/conference/chatbox.scss
+++ b/client/src/app/components/conference/chatbox.scss
@@ -12,21 +12,23 @@
 .chatContainer {
   max-height: 60vh;
   min-height: 10vh;
-  overflow: hidden;
+  overflow-y: scroll;
   -webkit-mask-image: -webkit-gradient(linear, left bottom,
   left top, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
 
   &::-webkit-scrollbar {
+    display: none;
     width: .5em;
+    background: transparent;
   }
 
   &::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgb(0, 0, 0);
+    display: none;
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: darkgrey;
-    outline: 1px solid slategrey;
+    display: none;
+    background: transparent;
   }
 }
 
@@ -36,10 +38,12 @@
 
   span {
     font-size: 1.5vw;
+    text-shadow: 2px 2px 3px rgba(50, 50, 50, 1);
   }
 
   p {
     font-size: 1.5vw;
     padding-top: .5vh;
+    text-shadow: 2px 2px 3px rgba(50, 50, 50, 1);
   }
 }
